--- a/package.json
+++ b/package.json
@@ -1,13 +1,36 @@
 {
   "name": "excalibur",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Multi-agent orchestration CLI with debate, critique, voting and consensus",
   "main": "index.js",
   "bin": {
     "excalibur": "./index.js"
   },
   "type": "module",
-  "keywords": ["ai", "cli", "orchestration", "debate", "consensus"],
+  "scripts": {
+    "start": "node index.js"
+  },
+  "keywords": [
+    "ai",
+    "cli",
+    "orchestration",
+    "debate",
+    "consensus",
+    "multi-agent",
+    "llm",
+    "artificial-intelligence",
+    "round-table"
+  ],
+  "author": "delexw",
+  "license": "MIT",
+  "homepage": "https://github.com/delexw/excalibur#readme",
+  "bugs": {
+    "url": "https://github.com/delexw/excalibur/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/delexw/excalibur.git"
+  },
   "engines": {
     "node": ">=18"
   },
@@ -16,6 +39,8 @@
     "logger.js",
     "agents.json",
     "prompts/",
-    "README.md"
-  ]
+    "README.md",
+    "CLAUDE.md"
+  ],
+  "preferGlobal": true
 }
