Enhance configuration management and CLI options in Excalibur
- Introduced a new `--config` option to display agent configuration information and file locations, improving user accessibility to configuration details.
- Added a `getConfigPaths` function to determine standard config file paths, ensuring a clear structure for locating agent configurations.
- Implemented a `showConfigInfo` function to present the status of configuration files, including user, current directory, and package directory paths.
- Created a `postinstall` script to automatically set up the user configuration file at `~/.excalibur/agents.json` for global installs, streamlining the setup process.
- Updated the README to reflect the new configuration management features and provide clear instructions for users on how to configure their agents.
- Overall, these changes enhance the usability and clarity of the Excalibur CLI, ensuring users can easily manage their agent configurations.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "node scripts/postinstall.js"
   },
   "keywords": [
     "ai",
@@ -37,8 +38,10 @@
   "files": [
     "index.js",
     "logger.js",
+    "interactive.js",
     "agents.json",
     "prompts/",
+    "scripts/",
     "README.md",
     "CLAUDE.md"
   ],
