feat: implement orchestration framework with prompt building, response formatting, and validation
- Add PromptBuilder class for constructing prompts with agent and context data.
- Introduce ResponseFormatter class to format action responses and final answers.
- Create ResponseValidator class to validate agent responses based on thresholds.
- Implement RoundIterator class to manage critique, revision, and voting phases.
- Replace old vote-tallier.js with a new TypeScript implementation in vote-tallier.ts.
- Add various parser classes (CodexParser, GeminiParser, DefaultParser) for handling agent output.
- Introduce ProcessManager for managing child processes and preventing memory leaks.
- Implement SessionManager for tracking session history.
- Define comprehensive types in types.ts for agents, proposals, critiques, and responses.
- Set up TypeScript configuration with tsconfig.json for project compilation.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "excalibur",
   "version": "0.0.1",
   "description": "Multi-agent orchestration CLI with debate, critique, voting and consensus",
-  "main": "index.js",
+  "main": "dist/index.js",
   "bin": {
-    "excalibur": "./index.js"
+    "excalibur": "dist/index.js"
   },
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "build": "tsc",
+    "start": "tsx index.ts",
+    "typecheck": "tsc --noEmit",
+    "prepublishOnly": "npm run build",
     "postinstall": "node scripts/postinstall.js --force"
   },
   "keywords": [
@@ -36,9 +39,7 @@
     "node": ">=18"
   },
   "files": [
-    "index.js",
-    "logger.js",
-    "interactive.js",
+    "dist/",
     "agents.json",
     "prompts/",
     "scripts/",
@@ -48,5 +49,10 @@
   "preferGlobal": true,
   "dependencies": {
     "blessed": "^0.1.81"
+  },
+  "devDependencies": {
+    "@types/node": "^25.3.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
